# thermal-conduction-rom

./: .gitignore  CMakeLists.txt  README.md  pod.py  pod_nn.py  pod_rbf.py  report.html  report.ipynb  requirements.txt  run.py  save_data.py  submit_train.sh
experiments/: dl_rom.yaml  fno.yaml  generate_experiments.py  pod_dl_rom.yaml  pod_nn.yaml
experiments/dl_rom/: exp_001.yaml  exp_003.yaml  exp_006.yaml  exp_009.yaml  exp_016.yaml  exp_024.yaml  exp_032.yaml  exp_064.yaml  exp_096.yaml  exp_128.yaml
experiments/pod_dl_rom/: exp_001.yaml  exp_003.yaml  exp_006.yaml  exp_009.yaml  exp_016.yaml  exp_024.yaml  exp_032.yaml  exp_064.yaml  exp_096.yaml  exp_128.yaml
experiments/pod_nn/: exp_001.yaml  exp_003.yaml  exp_006.yaml  exp_009.yaml  exp_016.yaml  exp_024.yaml  exp_032.yaml  exp_064.yaml  exp_096.yaml  exp_128.yaml
model/: dl_rom.py  pod_dl_rom.py  pod_nn.py
rom/: no_preoprossing.py  normalization.py  pod.py
rom/model/: dl_rom.py  fno.py  interpolation_network.py  pod_dl_rom.py  pod_nn.py
src/: bindings.cpp  pod.cpp  thermal_conduction.cpp
src/include/: parameter_acceptor.hpp  pod.hpp  thermal_conduction.hpp  utils.hpp
